--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
               <a class="menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-link current link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="./Contacts">Contacts</a>
@@ -52,7 +52,7 @@
       <section class="section-portfolio">
         <div class="container">
           <!-- прихований заголовок -->
-          <h1 class="hided">What We Do</h1>
+          <h1 class="is-hiden">What We Do</h1>
           <!--фільтр робіт-->
           <ul class="filter-btn list">
             <li class="filter-btn-item">
