--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           >
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Studio</a>
+              <a class="menu-link current link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Portfolio</a>
@@ -62,7 +62,7 @@
       <!--прихований заголовок 2-го типу. Перша секція тексту-->
       <section class="section-work">
         <div class="container">
-          <h2 class="hided">What We Teach</h2>
+          <h2 class="is-hiden">What We Teach</h2>
           <ul class="works-list list">
             <li class="works-list-item">
               <div class="svg-works">
