--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             Effective Solutions <br>for Your Business
           </h1>
 
-          <button class="btn" type="button">Order Service</button>
+          <button data-modal-open class="btn" type="button">Order Service</button>
         </div>
       </section>
       <!--прихований заголовок 2-го типу. Перша секція тексту-->
       <section class="section-work">
         <div class="container">
-          <h2 class="is-hiden">What We Teach</h2>
+          <h2 class="hidden">What We Teach</h2>
           <ul class="works-list list">
             <li class="works-list-item">
               <div class="svg-works">
@@ -447,6 +447,18 @@
         </div>
       </div>
     </footer>
-    <script src="./js/modal.js"></script>
+    <!-- Modal window -->
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+    <button data-modal-close class="modal-btn" type="button">
+      <svg class="modalsvg">
+        <use href="./images/symbol-defs.svg#icon-close"></use>
+      </svg>
+    </button>
+  </div>
+  
+</div>
+
+<script src="./js/modal.js"></script>
   </body>
 </html>
