--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       <section class="section-portfolio">
         <div class="container">
           <!-- прихований заголовок -->
-          <h1 class="is-hiden">What We Do</h1>
+          <h1 class="hidden">What We Do</h1>
           <!--фільтр робіт-->
           <ul class="filter-btn list">
             <li class="filter-btn-item">
@@ -74,10 +74,12 @@
           <ul class="list-works list">
             <li class="list-works-item">
               <a class="link" href="">
+                <div class="thumb">
                 <img
                   class="img"
                   src="./images/img11.jpg"
                   alt="Bank App screens">
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">
                     Banking App Interface Concept
