--- a/portfolio.html
+++ b/portfolio.html
@@ -73,12 +73,15 @@
           </ul>
           <ul class="list-works list">
             <li class="list-works-item">
-              <a class="link" href="">
-                <div class="thumb">
+              <a class="list-works-link link" href="">
+                <div class="overlay"> 
                 <img
                   class="img"
                   src="./images/img11.jpg"
                   alt="Bank App screens">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                     Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                      Cloud Storage App</p>
                 </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">
@@ -89,12 +92,17 @@
               </a>
             </li>
             <li class="list-works-item">
-              <a class="link" href="">
+              <a class="list-works-link link" href="">
+                <div class="overlay">
                 <img
                   class="img"
                   src="./images/img22.jpg"
                   alt="blue ground"
                   width="360">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     Cloud Storage App</p>
+               </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Cashless Payment</h2>
                   <p class="text-list-works">Marketing</p>
@@ -102,12 +110,17 @@
               </a>
             </li>
             <li class="list-works-item">
-              <a class="link" href="">
+              <a class="list-works-link link" href="">
+                <div class="overlay">
                 <img
                   class="img"
                   src="./images/img33.jpg"
                   alt="App for PC and Handy"
                   width="360">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     Cloud Storage App</p>
+               </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Meditaion App</h2>
                   <p class="text-list-works">App</p>
@@ -115,12 +128,17 @@
               </a>
             </li>
             <li class="list-works-item">
-              <a class="link" href="">
+              <a class="list-works-link link" href="">
+                <div class="overlay">
                 <img
                   class="img"
                   src="./images/img44.jpg"
                   alt="Car salon"
                   width="360">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     Cloud Storage App</p>
+               </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Taxi Service</h2>
                   <p class="text-list-works">Marketing</p>
@@ -128,12 +146,17 @@
               </a>
             </li>
             <li class="list-works-item">
-              <a class="link" href="">
+              <a class="list-works-link link" href="">
+                <div class="overlay">
                 <img
                   class="img"
                   src="./images/img55.jpg"
                   alt="Screenlocks"
                   width="360">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     Cloud Storage App</p>
+               </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Screen Illustrations</h2>
                   <p class="text-list-works">Design</p>
@@ -141,12 +164,17 @@
               </a>
             </li>
             <li class="list-works-item">
-              <a class="link" href="">
+              <a class="list-works-link link" href="">
+                <div class="overlay">
                 <img
                   class="img"
                   src="./images/img66.jpg"
                   alt="Girl listen music"
                   width="360">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     Cloud Storage App</p>
+               </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Online Courses</h2>
                   <p class="text-list-works">Marketing</p>
@@ -154,12 +182,17 @@
               </a>
             </li>
             <li class="list-works-item">
-              <a class="link" href="">
+              <a class="list-works-link link" href="">
+                <div class="overlay">
                 <img
                   class="img"
                   src="./images/img77.jpg"
                   alt="Design screens in App"
                   width="360">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     Cloud Storage App</p>
+               </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Instagram Stories Concept</h2>
                   <p class="text-list-works">Design</p>
@@ -167,12 +200,17 @@
               </a>
             </li>
             <li class="list-works-item">
-              <a class="link" href="">
+              <a class="list-works-link link" href="">
+                <div class="overlay">
                 <img
                   class="img"
                   src="./images/img88.jpg"
                   alt="Vegetables in a bag"
                   width="360">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     Cloud Storage App</p>
+               </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Organic Food</h2>
                   <p class="text-list-works">Web Site</p>
@@ -180,12 +218,17 @@
               </a>
             </li>
             <li class="list-works-item">
-              <a class="link" href="">
+              <a class="list-works-link link" href="">
+                <div class="overlay">
                 <img
                   class="img"
                   src="./images/img99.jpg"
                   alt="Making coffee"
                   width="360">
+                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
+                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     Cloud Storage App</p>
+               </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Fresh Coffee</h2>
                   <p class="text-list-works">Web Site</p>
