--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             Effective Solutions <br>for Your Business
           </h1>
 
-          <button data-modal-open class="btn" type="button">Order Service</button>
+          <button data-modal-open class="btn" type="button">
+            Order Service
+          </button>
         </div>
       </section>
       <!--прихований заголовок 2-го типу. Перша секція тексту-->
@@ -448,15 +450,15 @@
       </div>
     </footer>
     <!-- Modal window -->
-<div class="backdrop is-hidden" data-modal>
-  <div class="modal">
-    <button data-modal-close class="modal-btn" type="button">
-      <svg class="modalsvg">
-        <use href="./images/symbol-defs.svg#icon-close"></use>
-      </svg>
-    </button>
-  </div>
-</div>
-<script src="./js/modal.js"></script>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close class="modal-btn" type="button">
+          <svg class="modalsvg">
+            <use href="./images/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
