--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,9 @@
               <a class="menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link current link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-link current link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="./Contacts">Contacts</a>
@@ -74,14 +76,16 @@
           <ul class="list-works list">
             <li class="list-works-item">
               <a class="list-works-link link" href="">
-                <div class="overlay"> 
-                <img
-                  class="img"
-                  src="./images/img11.jpg"
-                  alt="Bank App screens">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                     Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/img11.jpg"
+                    alt="Bank App screens">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">
@@ -94,15 +98,17 @@
             <li class="list-works-item">
               <a class="list-works-link link" href="">
                 <div class="overlay">
-                <img
-                  class="img"
-                  src="./images/img22.jpg"
-                  alt="blue ground"
-                  width="360">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                     Cloud Storage App</p>
-               </div>
+                  <img
+                    class="img"
+                    src="./images/img22.jpg"
+                    alt="blue ground"
+                    width="360">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Cashless Payment</h2>
                   <p class="text-list-works">Marketing</p>
@@ -112,15 +118,17 @@
             <li class="list-works-item">
               <a class="list-works-link link" href="">
                 <div class="overlay">
-                <img
-                  class="img"
-                  src="./images/img33.jpg"
-                  alt="App for PC and Handy"
-                  width="360">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                     Cloud Storage App</p>
-               </div>
+                  <img
+                    class="img"
+                    src="./images/img33.jpg"
+                    alt="App for PC and Handy"
+                    width="360">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Meditaion App</h2>
                   <p class="text-list-works">App</p>
@@ -130,15 +138,17 @@
             <li class="list-works-item">
               <a class="list-works-link link" href="">
                 <div class="overlay">
-                <img
-                  class="img"
-                  src="./images/img44.jpg"
-                  alt="Car salon"
-                  width="360">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                     Cloud Storage App</p>
-               </div>
+                  <img
+                    class="img"
+                    src="./images/img44.jpg"
+                    alt="Car salon"
+                    width="360">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Taxi Service</h2>
                   <p class="text-list-works">Marketing</p>
@@ -148,15 +158,17 @@
             <li class="list-works-item">
               <a class="list-works-link link" href="">
                 <div class="overlay">
-                <img
-                  class="img"
-                  src="./images/img55.jpg"
-                  alt="Screenlocks"
-                  width="360">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                     Cloud Storage App</p>
-               </div>
+                  <img
+                    class="img"
+                    src="./images/img55.jpg"
+                    alt="Screenlocks"
+                    width="360">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Screen Illustrations</h2>
                   <p class="text-list-works">Design</p>
@@ -166,15 +178,17 @@
             <li class="list-works-item">
               <a class="list-works-link link" href="">
                 <div class="overlay">
-                <img
-                  class="img"
-                  src="./images/img66.jpg"
-                  alt="Girl listen music"
-                  width="360">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                     Cloud Storage App</p>
-               </div>
+                  <img
+                    class="img"
+                    src="./images/img66.jpg"
+                    alt="Girl listen music"
+                    width="360">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Online Courses</h2>
                   <p class="text-list-works">Marketing</p>
@@ -184,15 +198,17 @@
             <li class="list-works-item">
               <a class="list-works-link link" href="">
                 <div class="overlay">
-                <img
-                  class="img"
-                  src="./images/img77.jpg"
-                  alt="Design screens in App"
-                  width="360">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                     Cloud Storage App</p>
-               </div>
+                  <img
+                    class="img"
+                    src="./images/img77.jpg"
+                    alt="Design screens in App"
+                    width="360">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Instagram Stories Concept</h2>
                   <p class="text-list-works">Design</p>
@@ -202,15 +218,17 @@
             <li class="list-works-item">
               <a class="list-works-link link" href="">
                 <div class="overlay">
-                <img
-                  class="img"
-                  src="./images/img88.jpg"
-                  alt="Vegetables in a bag"
-                  width="360">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                     Cloud Storage App</p>
-               </div>
+                  <img
+                    class="img"
+                    src="./images/img88.jpg"
+                    alt="Vegetables in a bag"
+                    width="360">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Organic Food</h2>
                   <p class="text-list-works">Web Site</p>
@@ -220,15 +238,17 @@
             <li class="list-works-item">
               <a class="list-works-link link" href="">
                 <div class="overlay">
-                <img
-                  class="img"
-                  src="./images/img99.jpg"
-                  alt="Making coffee"
-                  width="360">
-                  <p class="text-overlay">14 Stylish and User-Friendly App Design Concepts ·
-                    Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                     Cloud Storage App</p>
-               </div>
+                  <img
+                    class="img"
+                    src="./images/img99.jpg"
+                    alt="Making coffee"
+                    width="360">
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-works-item">
                   <h2 class="title-list-works">Fresh Coffee</h2>
                   <p class="text-list-works">Web Site</p>
